@@ -1,5 +1,6 @@
 package mc.gouv.xaf.backweb.ws;
 
+import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileNotFoundException;
@@ -9,6 +10,8 @@ import java.io.InputStream;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -16,16 +19,24 @@ import java.util.Map;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 
+import javax.imageio.ImageIO;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.pdfbox.multipdf.PDFMergerUtility;
+import org.apache.pdfbox.pdmodel.PDDocument;
+import org.apache.pdfbox.pdmodel.PDPage;
+import org.apache.pdfbox.pdmodel.PDPageContentStream;
+import org.apache.pdfbox.pdmodel.common.PDRectangle;
+import org.apache.pdfbox.pdmodel.graphics.image.LosslessFactory;
+import org.apache.pdfbox.pdmodel.graphics.image.PDImageXObject;
+import org.apache.pdfbox.util.Matrix;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.InputStreamResource;
-import org.springframework.core.io.Resource;
 import org.springframework.http.ContentDisposition;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
@@ -34,14 +45,11 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.servlet.HandlerMapping;
-
-import com.google.common.io.Files;
 
 import mc.gouv.xaf.back.properties.GouvPropertiesResolver;
 import mc.gouv.xaf.back.service.DemarchesDataProvider;
@@ -51,7 +59,6 @@ import mc.gouv.xaf.back.service.utils.FileUtils;
 import mc.gouv.xaf.shared.dto.DemandeDTO;
 import mc.gouv.xaf.shared.dto.DemandeFileDTO;
 import mc.gouv.xboot.config.web.annotation.GouvRestController;
-
 
 /**
  * 
@@ -64,6 +71,7 @@ import mc.gouv.xboot.config.web.annotation.GouvRestController;
 @RequestMapping("/ws/file")
 public class FileController {
 
+	private static final String UTF_8 = "UTF-8";
 
 	private static final Logger LOGGER = LoggerFactory.getLogger(FileController.class);
 
@@ -78,7 +86,7 @@ public class FileController {
 
 	@Autowired
 	private DemarchesDataProvider demarchesDataProvider;
-	
+
 	public static final int DEFAULT_BUFFER_SIZE = 8192;
 
 	@GetMapping(value = "/get/**")
@@ -93,7 +101,7 @@ public class FileController {
 		LOGGER.info("Chemin du fichier récupérée dans la requête : {}", file);
 
 		// Bugfix #16805: encodage des noms des fichiers avec caractères spéciaux
-		String filePathEncoded = URLEncoder.encode(file, "UTF-8");
+		String filePathEncoded = URLEncoder.encode(file, UTF_8);
 
 		fileService.getFile(filePathEncoded, gouvPropertiesResolver.getContainerId(), response);
 
@@ -102,31 +110,152 @@ public class FileController {
 
 	@GetMapping(value = "/get/files/{demandeId}")
 	@ResponseBody
-	public ResponseEntity<Resource> getFiles(@PathVariable(value = "demandeId") String demandeId,
-			@RequestParam(required=false) String fileType, @RequestParam(required=false) String zipName) throws IOException {
+	public ResponseEntity<InputStreamResource> getFiles(@PathVariable(value = "demandeId") String demandeId,
+			@RequestParam(required = false) String fileType, @RequestParam(required = false) String zipName)
+			throws IOException {
 
 		LOGGER.info("====================== getFiles()");
+		// Récupération des fichiers de la demande
 		DemandeDTO demande = demandesService.getDemande(demandeId);
 		List<DemandeFileDTO> fichiers = FileUtils.getAllFileDemande(demande);
-		File tmp = Files.createTempDir();
-		List<File> filesToZip = getFilesToZip(fileType, fichiers, tmp);
-		createZipFile(filesToZip, tmp);
-		HttpHeaders headers = new HttpHeaders();
-		headers.setContentType(MediaType.APPLICATION_OCTET_STREAM);
-		if(null == zipName) {
+		if (null == zipName) {
 			zipName = demandeId;
 		}
-		ContentDisposition contentDisposition = ContentDisposition.builder("inline").filename(zipName + ".zip").build();
-		headers.setContentDisposition(contentDisposition);
+		String fileName = zipName + ".zip";
+		// Création du dossier temporaire qui contiendra le zip final
+		Path tmp = Files.createTempDirectory("tmp");
+		tmp.toFile().deleteOnExit();
+		List<File> filesToZip = getFilesToInclude(fileType, fichiers, tmp.toFile());
+		createZipFile(filesToZip, tmp.toFile(), fileName);
 
-		InputStream is = new FileInputStream(tmp.getAbsolutePath()+"/tmp.zip"); // get your input stream here
-		Resource resource = new InputStreamResource(is);
-		tmp.delete();
-		return new ResponseEntity<>(resource, headers, HttpStatus.OK);
+		// Préparation de la requête
+		HttpHeaders headers = setHeaders(fileName);
+		InputStreamResource isr = setInputStream(fileName, tmp);
+		return new ResponseEntity<>(isr, headers, HttpStatus.OK);
 	}
 
-	private List<File> getFilesToZip(String fileType, List<DemandeFileDTO> fichiers, File tmp) throws IOException {
-		List<File> result = new ArrayList<File>();
+	@GetMapping(value = "/get/pdf/files/{demandeId}")
+	@ResponseBody
+	public ResponseEntity<InputStreamResource> getFilesPdf(@PathVariable(value = "demandeId") String demandeId,
+			@RequestParam(required = false) String fileType, @RequestParam(required = false) String pdfName)
+			throws IOException {
+
+		LOGGER.info("====================== getAllFilesPdf()");
+		// Récupération des fichiers de la demande
+		DemandeDTO demande = demandesService.getDemande(demandeId);
+		List<DemandeFileDTO> fichiers = FileUtils.getAllFileDemande(demande);
+		if (null == pdfName) {
+			pdfName = demandeId;
+		}
+		String fileName = pdfName + ".pdf";
+		// Création du dossier temporaire qui contiendra le zip final
+		Path tmp = Files.createTempDirectory("tmp");
+		tmp.toFile().deleteOnExit();
+		List<File> filesToZip = getFilesToInclude(fileType, fichiers, tmp.toFile());
+		constructPdf(tmp.toFile(), filesToZip, fileName);
+
+		HttpHeaders headers = setHeaders(fileName);
+		InputStreamResource isr = setInputStream(fileName, tmp);
+		return new ResponseEntity<>(isr, headers, HttpStatus.OK);
+	}
+
+	/**
+	 * Méthode en charge de créer un InputStreamResource (et de redéfinir le
+	 * comportement du close). Cet ISR sera le fichier PDF renvoyée en réponse à la
+	 * requête
+	 * 
+	 * @param fileName : Nom du fichier retourné par la requête
+	 * @param tmp      : Localisation du dossier temporaire qui sera supprimé une
+	 *                 fois la requête terminée
+	 * @return : L'input stream resource utilisé dans la requête
+	 * @throws FileNotFoundException
+	 */
+	private InputStreamResource setInputStream(String fileName, Path tmp) throws FileNotFoundException {
+		File result = new File(tmp.toAbsolutePath().toString(), fileName);
+		return new InputStreamResource(new FileInputStream(result) {
+			// Ici on override le close classique afin de pouvoir supprimer les fichiers
+			// générés à la volée une fois la requête terminée (ie la réponse renvoyée)
+			@Override
+			public void close() throws IOException {
+				super.close();
+				org.apache.commons.io.FileUtils.deleteDirectory(tmp.toFile());
+			}
+		});
+	}
+
+	private HttpHeaders setHeaders(String fileName) {
+		HttpHeaders headers = new HttpHeaders();
+		headers.setContentType(MediaType.APPLICATION_OCTET_STREAM);
+		ContentDisposition contentDisposition = ContentDisposition.builder("inline").filename(fileName).build();
+		headers.setContentDisposition(contentDisposition);
+		return headers;
+	}
+	
+	private void constructPdf(File dest, List<File> files, String pdfName) throws IOException {
+		PDFMergerUtility pdfMerger = new PDFMergerUtility();
+		pdfMerger.setDestinationFileName(dest.getAbsolutePath()+ "/" + pdfName);
+		try (PDDocument doc = new PDDocument()) {
+			for (File file : files) {
+				if (!file.getAbsolutePath().toLowerCase().endsWith(".pdf")) {
+					copyFileInDestination(ImageIO.read(file), doc);
+				} else {
+					pdfMerger.addSource(file);
+				}
+			}
+			doc.save(dest.getAbsolutePath() + "/JpegToPdfFile.pdf");
+			pdfMerger.addSource(new File(dest.getAbsolutePath() + "/JpegToPdfFile.pdf"));
+			pdfMerger.mergeDocuments(null);
+		}
+	}
+
+	private void copyFileInDestination(BufferedImage bufferedImage, PDDocument doc) {
+		int height = 830;
+		int width = 580;
+		PDPage page = new PDPage(PDRectangle.A4);
+		doc.addPage(page);
+		try {
+			PDImageXObject pdImageXObject = LosslessFactory.createFromImage(doc, bufferedImage);
+			try (PDPageContentStream contentStream = new PDPageContentStream(doc, page,
+					PDPageContentStream.AppendMode.APPEND, false, false)) {
+				float scale = 1;
+				int largeurImage = bufferedImage.getWidth();
+				int hauteurImage = bufferedImage.getHeight();
+				if (largeurImage > width) {
+					scale = (float) width / largeurImage;
+				}
+
+				if (hauteurImage > height) {
+					float tempscale = (float) height / hauteurImage;
+					if (tempscale < scale) {
+						scale = tempscale;
+					}
+				}
+				contentStream.saveGraphicsState();
+				// ici on check si l'image a besoin d'etre tournée à 90 degrès
+				if (largeurImage > hauteurImage) {
+					contentStream.transform(Matrix.getRotateInstance(Math.toRadians(90),
+							page.getCropBox().getWidth() + page.getCropBox().getLowerLeftX(), 0));
+				}
+				contentStream.drawImage(pdImageXObject, 12, 12, largeurImage * scale, hauteurImage * scale);
+				contentStream.restoreGraphicsState();
+			}
+		} catch (IOException | NullPointerException e) {
+			e.printStackTrace();
+		}
+	}
+
+	/**
+	 * Méthode permettant de récupérer les fichiers à zipper en fonction du bouton
+	 * cliqué
+	 * 
+	 * @param fileType
+	 * @param fichiers
+	 * @param tmp
+	 * @return
+	 * @throws IOException
+	 */
+	private List<File> getFilesToInclude(String fileType, List<DemandeFileDTO> fichiers, File tmp) throws IOException {
+		List<File> result = new ArrayList<>();
 		int count = 0;
 		for (DemandeFileDTO currentFile : fichiers) {
 			String typedoc = currentFile.getTypedoc();
@@ -135,11 +264,16 @@ public class FileController {
 			}
 			String file = currentFile.getUrl();
 			// Bugfix #16805: encodage des noms des fichiers avec caractères spéciaux
-			String filePathEncoded = URLEncoder.encode(file, "UTF-8");
+			String filePathEncoded = URLEncoder.encode(file, UTF_8);
 			String fileName = currentFile.getName();
 			int extensionIndex = fileName.lastIndexOf(".");
 			String extension = fileName.substring(extensionIndex + 1);
-			File fileToAdd = new File(tmp.getAbsolutePath() + "/" + fileName.replace("." + extension, "-" + count + "." + extension));
+			String typeDoc = "";
+			if (StringUtils.isNotBlank(currentFile.getTypedoc())) {
+				typeDoc = currentFile.getTypedoc() + "_";
+			}
+			File fileToAdd = new File(tmp.getAbsolutePath(), typeDoc
+					+ fileName.replace("." + extension, "-" + count + "." + extension));
 			InputStream is = fileService.getFile(gouvPropertiesResolver.getDemarcheId() + "/"
 					+ gouvPropertiesResolver.getContainerId() + "/" + filePathEncoded);
 			copyInputStreamToFile(is, fileToAdd);
@@ -149,30 +283,25 @@ public class FileController {
 		return result;
 	}
 
-	private void createZipFile(List<File> filesToZip, File tmp) throws FileNotFoundException, IOException {
+	private void createZipFile(List<File> filesToZip, File tmp, String fileName) throws IOException {
 		byte[] buffer = new byte[1024];
-		// create the ZIP file
-		FileOutputStream fos = new FileOutputStream(tmp.getAbsolutePath()+"/tmp.zip");
-		ZipOutputStream zos = new ZipOutputStream(fos);
-		for (File currentFile : filesToZip) {
-			FileInputStream fis = new FileInputStream(currentFile);
-			// begin writing a new ZIP entry, positions the stream to the start of the entry
-			// data
-			zos.putNextEntry(new ZipEntry(currentFile.getName()));
-			// transfer bytes from the file to the ZIP file
-			int length;
-			while ((length = fis.read(buffer)) > 0) {
-				zos.write(buffer, 0, length);
+		// creation du fichier ZIP
+		FileOutputStream fos = new FileOutputStream(tmp.getAbsolutePath() + "/" + fileName);
+		try (ZipOutputStream zos = new ZipOutputStream(fos)) {
+			for (File currentFile : filesToZip) {
+				try (FileInputStream fis = new FileInputStream(currentFile)) {
+					zos.putNextEntry(new ZipEntry(currentFile.getName()));
+					int length;
+					while ((length = fis.read(buffer)) > 0) {
+						zos.write(buffer, 0, length);
+					}
+					zos.closeEntry();
+				}
 			}
-
-			zos.closeEntry();
-			fis.close();
 		}
-		zos.close();
 	}
 
 	private void copyInputStreamToFile(InputStream inputStream, File file) throws IOException {
-		// append = false
 		try (FileOutputStream outputStream = new FileOutputStream(file, false)) {
 			int read;
 			byte[] bytes = new byte[DEFAULT_BUFFER_SIZE];
@@ -182,7 +311,7 @@ public class FileController {
 		}
 	}
 
-	@RequestMapping(value = "/get/apercu/**", method = RequestMethod.GET)
+	@GetMapping(value = "/get/apercu/**")
 	@ResponseStatus(HttpStatus.OK) // 200
 	public void getApercuFile(HttpServletRequest request, HttpServletResponse response) {
 
@@ -192,7 +321,7 @@ public class FileController {
 		file = file.replace("/ws/file/get/apercu", "");
 		try {
 			// Bugfix #16805: encodage des noms des fichiers avec caractères spéciaux
-			String filePathEncoded = URLEncoder.encode(file, "UTF-8");
+			String filePathEncoded = URLEncoder.encode(file, UTF_8);
 			InputStream inputFile = fileService.getFile(filePathEncoded, gouvPropertiesResolver.getContainerId());
 			LOGGER.info("Écriture du fichier dans l'OutputStream...");
 			IOUtils.copy(inputFile, response.getOutputStream());
@@ -222,11 +351,11 @@ public class FileController {
 
 		DemandeDTO demande = demandesService.getDemande(gouvPropertiesResolver.getDemarcheId(), demandeId);
 
-		Map<String, String> fileNames = new HashMap<String, String>();
+		Map<String, String> fileNames = new HashMap<>();
 
 		for (MultipartFile file : files) {
 			if (!StringUtils.isBlank(file.getOriginalFilename())) {
-				LOGGER.info(String.format("Part à traiter : %s" , file.getOriginalFilename()));
+				LOGGER.info("Part à traiter : {}", file.getOriginalFilename());
 
 				LOGGER.info("Appel au FileService...");
 				String filename = fileService.saveFile(demande, gouvPropertiesResolver.getContainerId(), file,
